# usdproxy

./: .gitignore  .gitmodules  .vimrc  Build.py  BuildUsd.py  BuildUsdWithViewer.py  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  FindUSDMonolithic.cmake
src/: CMakeLists.txt  DiagnosticHandler.cpp  DiagnosticHandler.h  FileFormatArguments.cpp  FileFormatArguments.h  GfCamera.cpp  GfCamera.h  GfHalf.cpp  GfHalf.h  GfMatrix4d.cpp  GfMatrix4d.h  GfQuatd.cpp  GfQuatd.h  GfQuath.cpp  GfQuath.h  GfRotation.cpp  GfRotation.h  GfVec2d.cpp  GfVec2d.h  GfVec2f.cpp  GfVec2f.h  GfVec2i.cpp  GfVec2i.h  GfVec3d.cpp  GfVec3d.h  GfVec3f.cpp  GfVec3f.h  KindToken.cpp  KindToken.h  PlugPlugin.cpp  PlugPlugin.h  PlugPluginPtrVector.cpp  PlugPluginPtrVector.h  PlugRegistry.cpp  PlugRegistry.h  PxrDiagnosticHandler.cpp  PxrDiagnosticHandler.h  SdfAssetPath.cpp  SdfAssetPath.h  SdfLayerHandle.cpp  (+86 more)
src/swig/: CMakeLists.txt  DiagnosticHandler.i  FileFormatArguments.i  GfCamera.i  GfHalf.i  GfMatrix4d.i  GfQuatd.i  GfQuath.i  GfRotation.i  GfVec2d.i  GfVec2f.i  GfVec2i.i  GfVec3d.i  GfVec3f.i  KindToken.i  PlugPlugin.i  PlugPluginPtrVector.i  PlugRegistry.i  PxrDiagnosticHandler.i  SdfAssetPath.i  SdfLayerHandle.i  SdfLayerHandleVector.i  SdfLayerRefPtr.i  SdfPath.i  SdfValueTypeName.i  TfToken.i  UsdAttribute.i  UsdGeomCamera.i  UsdGeomMesh.i  UsdGeomPointInstancer.i  UsdGeomPrimvar.i  UsdGeomPrimvarsAPI.i  UsdGeomScope.i  UsdGeomTokens.i  UsdGeomXform.i  UsdGeomXformOp.i  UsdGeomXformOpArray.i  UsdLuxDistantLight.i  UsdLuxDomeLight.i  UsdLuxNonboundableLightBase.i  (+23 more)
tests/: CMakeLists.txt  Environment.h.in  TestUsd.cpp
